<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_please_rate"
        app:layout_constraintVertical_bias="0.619" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rb_norm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/norm"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_result"
        app:layout_constraintEnd_toStartOf="@+id/btn_save_result"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_please_rate"
        app:layout_constraintVertical_bias="0.502" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rb_nenorm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Ne norm"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/btn_save_result"
        app:layout_constraintTop_toBottomOf="@+id/rv_please_rate"
        app:layout_constraintVertical_bias="0.46" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rv_please_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_rate_application"
        android:textStyle="bold"
        android:textSize="14dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />
</androidx.constraintlayout.widget.ConstraintLayout>